[package]
name = "socks5-proto"
version = "0.3.1"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Fundamental abstractions and async read / write functions for SOCKS5 protocol"
categories = ["network-programming", "asynchronous"]
keywords = ["socks5", "socks", "proxy", "async", "network"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/socks5-server"

[dependencies]
byteorder = "1.4"
bytes = "1.1"
tokio = { version = "1.19", features = ["io-util"] }
