[package]
name = "socks5-proto"
version = "0.3.3"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Fundamental abstractions and async read / write functions for SOCKS5 protocol"
categories = ["network-programming", "asynchronous"]
keywords = ["socks5", "socks", "proxy", "async", "network"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/socks5-server"

[dependencies]
byteorder = { version = "1.4.3", default-features = false, features = ["std"] }
bytes = { version = "1.3.0", default-features = false, features = ["std"] }
tokio = { version = "1.24.2", default-features = false, features = ["io-util"] }
