[package]
name = "socks5-server"
version = "0.8.3"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Relatively low-level asynchronized SOCKS5 server implementation based on tokio"
categories = ["network-programming", "asynchronous"]
keywords = ["socks5", "socks", "proxy", "async", "network"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/socks5-server"

[dependencies]
async-trait = { version = "0.1.63", default-features = false }
bytes = { version = "1.3.0", default-features = false, features = ["std"] }
socks5-proto = { version = "0.3.3", default-features = false }
tokio = { version = "1.24.2", default-features = false, features = ["net"] }

[dev-dependencies]
tokio = { version = "1.24.2", default-features = false, features = ["macros", "rt-multi-thread"] }
