[package]
name = "socks5-server"
version = "0.10.1"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Fine-grained relatively low-level asynchronized SOCKS5 server library based on tokio"
categories = ["network-programming", "asynchronous"]
keywords = ["socks5", "socks", "proxy", "async", "network"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/socks5-server"

[dependencies]
async-trait = { version = "0.1.85", default-features = false }
bytes = { version = "1.9.0", default-features = false, features = ["std"] }
socks5-proto = { version = "0.4.1", default-features = false }
tokio = { version = "1.43.0", default-features = false, features = ["net"] }

[dev-dependencies]
tokio = { version = "1.43.0", default-features = false, features = ["macros", "rt-multi-thread"] }
